# how-sqlite-works

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  book.toml
book-sqlite/: COMPARISON.md  SUMMARY.md  chap1_overview.md  chap_btree.md  chap_code_generator.md  chap_transaction_management.md  chap_virtual_machine.md  wal_checkpoint.md
book-sqlite/chap1_overview/: chap1_overview.md  vector.md
book-sqlite/chap4_virtual_machine/: vm.md
book-sqlite/chap6_pager/: pager_checkpoint_result.md  pager_checkpoint_state.md  pager_state.md  pager_submodule_interconnection.excalidraw  pager_txn_cacheflush.md  pager_txn_commit.md  pager_txn_write.md  pager_walSyncFlags.md
book-sqlite/chap7_wal/: checkpoint_status.md  pages_checkpointed.md  pages_in_wal.md  syncing.md  wal.md  wal_checkpoint.md
book-sqlite/chap8_transaction/: notes.md  transaction.md
book-sqlite/chap9_vfs/: vfs.md
book-sqlite/pager/: chap_pager.md
book-sqlite/wal/: pages_checkpointed.md  wal_checkpoint.md
btree/: Cargo.toml
btree/src/: bt_cursor.rs  lib.rs
docs/: BTreeModule.md  ModuleAccess.md  ModuleBTree.md  ModuleRecovery.md  ModuleWAL.md  SQLQueryJourney.md
docs/spark/: QueryPlan.md
query-optimizer/: Cargo.toml  README.md  TODO.md
query-optimizer/src/: main.rs
query-optimizer/tests/: subquery_flattening.rs
rsql/src/: lib.rs  test_utils.rs  varint.rs
rsql/tests/: test_scan_commands.rs
src/: lib.rs  test_utils.rs  varint.rs
src/btree/: bt_cursor.rs  (+2 more)
tests/: test_dot_commands.rs  test_join_commands.rs  test_scan_commands.rs  tests.rs
vdbe/: Cargo.toml
vector/: Cargo.toml
(+113 files in other folders)
