[package]
name = "rsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
datafusion-sql = "33.0.0" # parsing sql to logical plan
datafusion-common = "33.0.0"
datafusion-expr = "33.0.0"
datafusion-physical-plan = "33.0.0" # using some utils like build_join_schema
arrow-schema = "^48.0"
log = "^0.4"
anyhow = "1.0.75"
env_logger = "^0.10"
lru = "0.12.0"
tempfile = "3.8.1"

[dev-dependencies]
assert_cmd = "^2"
hex = "^0.4" # 0.4.*
predicates = "^3"
log = "^0.4"

